test/test_suite/errors/anyerr_void.c3t
fault MyError
{
    FOO,
    BAR
}
fn void! errorThing()
{
    return MyError.BAR!;
}

fn void! errorThing2()
{
    return;
}

extern fn void printf(char*, ...);
fn void main()
{
    anyerr z = errorThing();
    printf("Z;   %llx\n", (iptr)(z));
    printf("BAR: %llx\n", (iptr)(MyError.BAR));
    printf("FOO: %llx\n", (iptr)(MyError.FOO));
    z = errorThing2();
    printf("Z2:  %llx\n", (iptr)(z));
}

/* #expect: anyerr_void.ll

define i64 @anyerr_void_errorThing() #0 {
entry:
  ret i64 ptrtoint (%.fault* @"anyerr_void_MyError$BAR" to i64)
}

define i64 @anyerr_void_errorThing2() #0 {
entry:
  %reterr = alloca i64, align 8
  ret i64 0
}

; Function Attrs: nounwind
declare void @printf(i8*, ...) #0

; Function Attrs: nounwind
define void @anyerr_void_main() #0 {
entry:
  %z = alloca i64, align 8
  %error_var = alloca i64, align 8
  %error_var1 = alloca i64, align 8
  store i64 0, i64* %error_var, align 8
  %0 = call i64 @anyerr_void_errorThing()
  %not_err = icmp eq i64 %0, 0
  br i1 %not_err, label %after.errcheck, label %error

error:                                            ; preds = %entry
  store i64 %0, i64* %error_var, align 8
  br label %noerr_block

after.errcheck:                                   ; preds = %entry
  br label %noerr_block

noerr_block:                                      ; preds = %after.errcheck, %error
  %1 = load i64, i64* %error_var, align 8
  store i64 %1, i64* %z, align 8
  %2 = load i64, i64* %z, align 8
  call void (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i32 0, i32 0), i64 %2)
  call void (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i32 0, i32 0), i64 ptrtoint (%.fault* @"anyerr_void_MyError$BAR" to i64))
  call void (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i32 0, i32 0), i64 ptrtoint (%.fault* @"anyerr_void_MyError$FOO" to i64))
  store i64 0, i64* %error_var1, align 8
  %3 = call i64 @anyerr_void_errorThing2()
  %not_err2 = icmp eq i64 %3, 0
  br i1 %not_err2, label %after.errcheck4, label %error3

error3:                                           ; preds = %noerr_block
  store i64 %3, i64* %error_var1, align 8
  br label %noerr_block5

after.errcheck4:                                  ; preds = %noerr_block
  br label %noerr_block5

noerr_block5:                                     ; preds = %after.errcheck4, %error3
  %4 = load i64, i64* %error_var1, align 8
  store i64 %4, i64* %z, align 8
  %5 = load i64, i64* %z, align 8
  call void (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i32 0, i32 0), i64 %5)
  ret void
}